--- a/TareaDeCursoContabilidadDeCosto/ProyectoContabilidadDeCosto/ProyectoContabilidadDeCosto/Properties/Resources.resx
+++ b/TareaDeCursoContabilidadDeCosto/ProyectoContabilidadDeCosto/ProyectoContabilidadDeCosto/Properties/Resources.resx
@@ -163,4 +163,10 @@
   <data name="Salir" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Salir.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Borrador" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Borrador.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Bote De Basura" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bote De Basura.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
